引入fastjson.properties配置，safeMode改造，完成50%。开启之后，部分情况下从redis取出的对象JSONObject未转成对应的实体。在使用时，引发类型转换异常，详见TODO